[gd_scene load_steps=18 format=3 uid="uid://cnt8rovyhr42l"]

[ext_resource type="Texture2D" uid="uid://2u5xpsy34jb0" path="res://foto geral.png" id="1_tqif8"]
[ext_resource type="Script" uid="uid://c4gynsrn3v5s8" path="res://SparkyGlory.gd" id="2_pdiug"]
[ext_resource type="Script" uid="uid://bjkkwg4355rsl" path="res://f_4_bric_walker.gd" id="3_d4mo2"]
[ext_resource type="AudioStream" uid="uid://b804ys4gn278p" path="res://TrilhaIrritado.tres" id="4_pdiug"]
[ext_resource type="AudioStream" uid="uid://nacl23iv83lh" path="res://TrilhaInvestigaçao.tres" id="5_lrpia"]
[ext_resource type="AudioStream" uid="uid://cchhn8c55blsv" path="res://TrilhaEnganaçao.tres" id="6_24x0x"]
[ext_resource type="AudioStream" uid="uid://c8yib5dm77hqa" path="res://TrilhaSonora.tres" id="7_i86j7"]
[ext_resource type="AudioStream" uid="uid://dgfbkxlseikej" path="res://TrilhaDica.tres" id="8_evn37"]

[sub_resource type="NavigationMesh" id="NavigationMesh_pdiug"]
vertices = PackedVector3Array(-68.12, 1, -67.645, -68.12, 1, 66.355, 65.88, 1, 66.355, 65.88, 1, -67.645)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d4mo2"]
albedo_texture = ExtResource("1_tqif8")

[sub_resource type="Environment" id="Environment_bnwo1"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_bnwo1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hjfnh"]
radius = 0.52795

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jwsij"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lywy5"]
height = 1.92919

[sub_resource type="SphereShape3D" id="SphereShape3D_d4mo2"]
radius = 7.29464

[sub_resource type="SphereShape3D" id="SphereShape3D_jwsij"]
radius = 32.4052

[node name="MainScene3D" type="Node3D"]

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.084, 0)
navigation_mesh = SubResource("NavigationMesh_pdiug")

[node name="CSGBox3D" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.12, 0, -0.645)
material_override = SubResource("StandardMaterial3D_d4mo2")
use_collision = true
size = Vector3(135, 1, 135)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 27.7779, 0)
light_color = Color(0.401864, 0.559654, 0.72932, 1)
light_energy = 1.55
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bnwo1")

[node name="SparkyGlory" type="CharacterBody3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, -4.9214, -28.2019)
script = ExtResource("2_pdiug")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SparkyGlory"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 1.6855, 0)
mesh = SubResource("CapsuleMesh_bnwo1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SparkyGlory"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 1.70484, 0)
shape = SubResource("CapsuleShape3D_hjfnh")

[node name="CameraPivot" type="Node3D" parent="SparkyGlory"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0160082, 1.63008, -0.11639)

[node name="Camera3D" type="Camera3D" parent="SparkyGlory/CameraPivot"]
transform = Transform3D(1.25, 0, 0, 0, 1.25, 0, 0, 0, 1.25, 5.49108e-05, 0.569105, 0.00571823)

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.25455, 10.7996, -34.4793)
size = Vector3(17.1148, 8.87793, 7.62781)

[node name="CSGBox3D3" type="CSGBox3D" parent="."]
transform = Transform3D(0.148465, 0, -0.988918, 0, 1, 0, 0.988918, 0, 0.148465, 37.8463, 6.13365, -5.89347)
size = Vector3(17.1148, 8.87793, 7.62781)

[node name="F4bricWalker" type="CharacterBody3D" parent="."]
transform = Transform3D(0.993171, 0, 0.116671, 0, 1, 0, -0.116671, 0, 0.993171, 22.513, -3.49607, 41.103)
script = ExtResource("3_d4mo2")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="F4bricWalker"]
avoidance_enabled = true

[node name="DicasFeedback" type="GPUParticles3D" parent="F4bricWalker"]
transform = Transform3D(-0.132256, 0, -0.991216, 0, 1, 0, 0.991216, 0, -0.132256, -0.149996, 0.23776, 0.141964)

[node name="Corpo" type="MeshInstance3D" parent="F4bricWalker"]
mesh = SubResource("CapsuleMesh_jwsij")

[node name="CollisionShape3D" type="CollisionShape3D" parent="F4bricWalker"]
shape = SubResource("CapsuleShape3D_lywy5")

[node name="Visao" type="Area3D" parent="F4bricWalker"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="F4bricWalker/Visao"]
shape = SubResource("SphereShape3D_d4mo2")

[node name="Dicas" type="Area3D" parent="F4bricWalker"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="F4bricWalker/Dicas"]
shape = SubResource("SphereShape3D_jwsij")
debug_color = Color(0, 0, 0, 0.42)

[node name="TrilhaIrritado" type="AudioStreamPlayer3D" parent="F4bricWalker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.83285, 0.103945)
stream = ExtResource("4_pdiug")

[node name="TrilhaInvestigação" type="AudioStreamPlayer3D" parent="F4bricWalker"]
stream = ExtResource("5_lrpia")

[node name="TrilhaEnganação" type="AudioStreamPlayer3D" parent="F4bricWalker"]
stream = ExtResource("6_24x0x")

[node name="TrilhaSonora" type="AudioStreamPlayer3D" parent="F4bricWalker"]
stream = ExtResource("7_i86j7")

[node name="TrilhaDica" type="AudioStreamPlayer3D" parent="F4bricWalker"]
stream = ExtResource("8_evn37")

[node name="DebugPath" type="MeshInstance3D" parent="F4bricWalker"]
